--- a/builder/tasks/main.yml
+++ b/builder/tasks/main.yml
@@ -1,10 +1,5 @@
 ---
 # tasks file for builder
-- name: Copy key.json
-  copy:
-    src: key.json
-    dest: /home/ubuntu/key.json
-
 - name: Ensure git is install
   apt:
     update_cache: yes 
@@ -18,14 +13,13 @@
     clone: yes
 
 - name: Ensure in DockerHub is login
-  shell: cat "{{ ya_cr_password }}" | docker login \
-          --username "{{ ya_cr_username }}" \
-          --password-stdin \
-          "{{ yandex_registry }}"
-    
+  docker_login:
+    username: "{{ DockerHub_user }}"
+    password: "{{ DockerHub_pass }}"
+
 - name: Ensure Docker image is build
   docker_image:
-    name: "{{ yandex_registry }}/{{ reg_id }}/caucuscalculator"
+    name: bakirovaasia/caucuscalculator
     build:
       path: "{{ build_dir }}/multistage"
     tag: latest
