--- a/docker/tasks/main.yml
+++ b/docker/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 # tasks file for docker
-- name: Ensure python3, python3-pip and docker.io is install
+- name: Ensure python3-pip and docker.io is install
   apt:
     update-cache: yes
     pkg:
