--- a/builder/vars/main.yml
+++ b/builder/vars/main.yml
@@ -1,4 +1,5 @@
 ---
 # vars file for builder
 my_repo: https://github.com/BakirovaAsia/Homework7.git
-build_dir: /home/admin/Homework7
+build_dir_old: /home/admin/Homework7
+build_dir: /tmp
