add jenkinsfile and dockerfile.agent

--- a/ansible_roles.yml
+++ b/ansible_roles.yml
@@ -4,6 +4,7 @@
   vars:
     region: us-east-2
     key_inst: sertKey
+    key_path: ./keys
     build_vm_ip: 0.0.0.0
     deploy_vm_ip: 0.0.0.0
   tasks:
@@ -11,14 +12,14 @@
       add_host:
         hostname: "{{ build_vm_ip }}"
         groupname: build_host
-        ansible_ssh_private_key_file: ./keys/{{ key_inst }}.pem
+        ansible_ssh_private_key_file: {{ key_path }}/{{ key_inst }}.pem
         ansible_ssh_user: ubuntu
     
     - name: Add deploy instance to host group
       add_host:
         hostname: "{{ deploy_vm_ip }}"
         groupname: deploy_host
-        ansible_ssh_private_key_file: ./keys/{{ key_inst }}.pem
+        ansible_ssh_private_key_file: {{ key_path }}/{{ key_inst }}.pem
         ansible_ssh_user: ubuntu
  
 
