jenkins to sudoers

--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -6,3 +6,5 @@ WORKDIR /home/agent/
 RUN wget https://releases.hashicorp.com/terraform/0.15.3/terraform_0.15.3_linux_amd64.zip \
     && unzip terraform_0.15.3_linux_amd64.zip \
     && mv terraform /usr/bin/
+
+RUN echo "jenkins ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
