--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -1,8 +1,9 @@
-FROM ansible/ansible:ubuntu1604py3
+FROM ubuntu:18.04
 
-RUN apt update && apt install wget awscli -y
+RUN apt update && apt install wget awscli python3-pip -y
 WORKDIR /home/agent/
 
 RUN wget https://releases.hashicorp.com/terraform/0.15.3/terraform_0.15.3_linux_amd64.zip \
     && unzip terraform_0.15.3_linux_amd64.zip \
     && mv terraform /usr/bin/
+RUN pip install ansible
