--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -5,6 +5,8 @@ ENV TZ=Europe/Moscow
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN apt update && apt install -y wget \
+                                 zip \
+                                 unzip \
                                  awscli \
                                  python3-pip \
     && rm -rf /var/lib/apt/lists/*
