--- a/ansible_roles.yml
+++ b/ansible_roles.yml
@@ -12,14 +12,14 @@
       add_host:
         hostname: "{{ build_vm_ip }}"
         groupname: build_host
-        ansible_ssh_private_key_file: {{ key_path }}/{{ key_inst }}.pem
+        ansible_ssh_private_key_file: "{{ key_path }}/{{ key_inst }}.pem"
         ansible_ssh_user: ubuntu
     
     - name: Add deploy instance to host group
       add_host:
         hostname: "{{ deploy_vm_ip }}"
         groupname: deploy_host
-        ansible_ssh_private_key_file: {{ key_path }}/{{ key_inst }}.pem
+        ansible_ssh_private_key_file: "{{ key_path }}/{{ key_inst }}.pem"
         ansible_ssh_user: ubuntu
  
 
