new install ansible

--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -1,14 +1,13 @@
 FROM ubuntu:18.04
 
-ENV TZ=Europe/Moscow
-
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-
 RUN apt update && apt install -y wget \
                                  zip \
                                  unzip \
-                                 awscli \
-                                 python3-pip \
+                                 awscli 
+
+RUN install software-properties-common -y \
+    && apt-add-repository --yes --update ppa:ansible/ansible \
+    && install ansible -y \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /home/agent/
@@ -16,5 +15,3 @@ WORKDIR /home/agent/
 RUN wget https://releases.hashicorp.com/terraform/0.15.3/terraform_0.15.3_linux_amd64.zip \
     && unzip terraform_0.15.3_linux_amd64.zip \
     && mv terraform /usr/bin/
-
-RUN pip3 install ansible --no-cache-dir
