--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -1,5 +1,9 @@
 FROM ubuntu:18.04
 
+ENV TZ=Europe/Moscow
+
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 RUN apt update && apt install -y wget \
                                  zip \
                                  unzip \
