--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -9,9 +9,9 @@ RUN apt update && apt install -y wget \
                                  unzip \
                                  awscli 
 
-RUN install software-properties-common -y \
+RUN apt install software-properties-common -y \
     && apt-add-repository --yes --update ppa:ansible/ansible \
-    && install ansible -y \
+    && apt install ansible -y \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /home/agent/
