--- a/ansible_roles.yml
+++ b/ansible_roles.yml
@@ -14,6 +14,7 @@
         groupname: build_host
         ansible_ssh_private_key_file: ./keys/{{ key_inst }}.pem
         ansible_ssh_user: ubuntu
+        ansible_ssh_extra_args: '-o StrictHostKeyChecking=no'
     
     - name: Add deploy instance to host group
       add_host:
@@ -21,6 +22,7 @@
         groupname: deploy_host
         ansible_ssh_private_key_file: ./keys/{{ key_inst }}.pem
         ansible_ssh_user: ubuntu
+        ansible_ssh_extra_args: '-o StrictHostKeyChecking=no'
  
 
 - name: Build-server configuration
